  - "arm advance" menu buttons removed.  Next/previous buttons function as normal
    for turnpoints (including startpoints) not requiring arming, for those that do
    require arm, "next" reads and functions as "arm" on first press and once armed,
    reads and functions as "next".  "previous" reads and functions as "previous" if
    not armed, "disarm" if armed.
* Android
  - support landscape/portrait switching

Version 6.0.7 - 2011/03/12
* devices
  - EW microRecorder: timeout during connect
  - EW microRecorder: increase RX timeout
  - EW microRecorder: insert new declaration into old EW-USER.TXT
* map
  - Airspace: support alternative OpenAir coordinate format
  - allow zooming in to 1 km
* replay: don't execute recorded input events
* Windows
  - hide the task bar on Windows CE Core
* Android
  - disable auto-restart on various Android configuration events
  - import time from internal GPS correctly
  - read internal GPS accuracy
  - the "back" hardware key cancels dialogs
  - map the volume keys to cursor up/down
* Linux
  - improved button and checkbox rendering
  - dialog keyboard navigation implemented
  - enable keyboard repeat

Version 6.0.6 - 2011/03/04
* devices:
  - fix declaration crash in Volkslogger, EW, CAI302, CAI GPS NAV
  - EW: remove duplicate newline in declaration output
* map
  - Airspace: add option to re-enable stencil buffer on PPC2000
* other
  - select waypoint: update heading filter only on large changes
  - reduce dialog memory usage
* Windows
  - compile vali-xcs.exe as console application
* Android
  - fix crash due to invalid UTF-8 labels
  - more pause/resume crash fixes
  - take advantage of ARMv7 CPUs
  - dialogs are modal now
* Linux
  - implement the serial port

Version 6.0.5 - 2011/02/26
* devices:
  - EWMicroRecorder: fix hang during task declaration
  - FLARM: parse PGRMZ as altitude above 1013.25 hPa
* user interface
  - scale the "Today Screen" buttons on large screens
  - fix page numbers in satellite image renderer