@@ -691,6 +691,12 @@
             <DataField DataType="double" DisplayFormat="%.0f min" EditFormat="%.0f" Min="1" Max="500" Step="1"/>
           </Edit>
         </Panel>
+        <Panel Name="frmAATTimeMargin" X="0" Y="-2" Width="-2" Height="22">
+          <Edit Name="prpAATTimeMargin" Caption="Optimisation Margin*" Height="22" CaptionWidth="120"
+            Help="Safety margin for AAT task optimisation.  Optimisation seeks to complete the task at the minimum time plus this margin time.">
+            <DataField DataType="double" DisplayFormat="%.0f min" EditFormat="%.0f" Min="1" Max="30" Step="1"/>
+          </Edit>
+        </Panel>
       </Panel>
     </Panel>
 
