@@ -132,6 +132,8 @@ public:
   /** Option to enable positioning of AAT targets at optimal point on isoline */
   bool optimise_targets_bearing;
   /** Option to enable calculation and setting of auto MacCready */
+  unsigned optimise_targets_margin;
+  /** Seconds additional to min time to optimise for */
   bool auto_mc;
 
   /** Enumeration of auto MC modes */
