@@ -387,9 +387,8 @@ OrderedTask::update_idle(const AIRCRAFT_STATE& state)
       && (task_behaviour.optimise_targets_range)
       && (get_ordered_task_behaviour().aat_min_time > fixed_zero)) {
 
-    fixed p = calc_min_target(state, get_ordered_task_behaviour().aat_min_time + fixed(300));
+    fixed p = calc_min_target(state, get_ordered_task_behaviour().aat_min_time + fixed(task_behaviour.optimise_targets_margin));
     (void)p;
-    // note: 300s is 5 minute margin
 
     if (task_behaviour.optimise_targets_bearing) {
       if (task_points[activeTaskPoint]->type == TaskPoint::AAT) {
