@@ -69,6 +69,8 @@ Version 6.1 - not yet released
     require arm, "next" reads and functions as "arm" on first press and once armed,
     reads and functions as "next".  "previous" reads and functions as "previous" if
     not armed, "disarm" if armed.
+  - time margin of AAT optimisation is configurable under "Default task turnpoints" page, expert mode
+    as "Optimisation Margin" option.
 * Android
   - support landscape/portrait switching
 
